# Client-App-Management

./: .gitignore  CMakeLists.txt  README.md  main.cpp
headers/: App.h  Client.h  Console.h  Date.h  Person.h
sources/: App.cpp  Client.cpp  Console.cpp  Date.cpp  Person.cpp
